Fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -118,9 +118,9 @@ header  .intro {
 /* ---------------------------------------------------------------------------- */
 /* -------------------------------------Content-------------------------------- */
 /* ---------------------------------------------------------------------------- */
-#page-content {margin-bottom: 50px;}
+#page-content {margin-bottom: 30px;}
 #page-content .heading {margin-bottom: 30px;}
-#page-content .heading h2 {font-size: 28px;}
+/* #page-content .heading h2 {font-size: 28px;} */
 #page-content .content {
     padding-top: 4vh;
 }
